# nektar

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt
OceanTests/: convert_all.sh  test2.xml  test2_extrude.xml
cmake/: FindLibXSMM.cmake  Nektar++Config.cmake.in  NektarCommon.cmake  ThirdPartyBoost.cmake  ThirdPartyKokkos.cmake  ThirdPartyMetis.cmake
docs/: CMakeLists.txt
docs/developer-guide/: CMakeLists.txt  developer-guide.tex
docs/tutorials/: CMakeLists.txt  tutorials.tex
docs/user-guide/: CMakeLists.txt
pkg/: CMakeCommon.cmake  CMakeLists.txt  CMakeListsDpkg.txt.in  CMakeListsRpm.txt.in  CMakeListsTgz.txt.in
solvers/ADRSolver/: CMakeLists.txt
solvers/CardiacEPSolver/: CMakeLists.txt  CardiacEPSolver.cpp  TransferringStuff.txt
solvers/CompressibleFlowSolver/: CMakeLists.txt
solvers/CompressibleFlowSolver/FieldConvert/: CMakeLists.txt
solvers/CompressibleFlowSolver/FieldConvert/ProcessModules/: ProcessChangeVariables.cpp  ProcessChangeVariables.h  ProcessNonConservativeVariables.cpp  ProcessNonConservativeVariables.h
solvers/DiffusionSolver/: DiffusionSolver.cpp
solvers/IncNavierStokesSolver/: CMakeLists.txt  IncNavierStokesSolver.cpp
solvers/OceanWaveSolver/: CMakeLists.txt  OceanWaveSolver.cpp
solvers/PorousMediaSolver/: CMakeLists.txt  PorousMediaSolver.cpp
solvers/ViscoelasticSolver/: CMakeLists.txt  ViscoelasticSolver.cpp
utilities/FieldConvert/: CMakeLists.txt  FieldConvert.cpp  Module.cpp  Module.h
utilities/NekMesh/: CMakeLists.txt  NekMesh.cpp
utilities/PostProcessing/: CMakeLists.txt  CalcEffPerm.cpp  FldAddVort.cpp  (+2 more)
(+206 files in other folders)
